# comp0035-data-prep

./: CGD - COVID education policy tracking.csv  CGD - COVID education policy tracking.xlsx  Data cleaning.ipynb  README.md  data_cleaning.ipynb  pyproject.toml  requirements.txt  setup.py
data/: cgd_raw.csv
pre-2022/: data_cleaning.ipynb  requirements.txt
